# nom-chat-agent

./: README.md  config.py  main.py  pyproject.toml  test_db.py
agent/: nodes.py  prompts.py  state.py
agent/tools/: common.py  prd.py  proposal.py  rag.py  research.py
artifacts/: PROPOSAL_2026-05-02_build-an-ai-meeting-note-takin.md
backend/: .dockerignore  .gitignore  Dockerfile  api.py  config.py  main.py  pyproject.toml  start.py
backend/agent/: graph.py  nodes.py  prompts.py  state.py
backend/agent/services/: ingestion.py
backend/agent/tools/: common.py  company_info.py  email.py  estimate.py  prd.py  proposal.py  rag.py  research.py  web_search.py
backend/artifacts/: PRD_2026-05-03_build-a-“meeting-agent”-prd..md  PRD_2026-05-03_create-a-prd-for-a-“meeting-ag.md  PRD_2026-05-03_create-a-prd-for-a-“news-agent.md  PRD_2026-05-03_re-generate-the-prd-for-a-meet.md
backend/docs/: agent_architecture.md
backend/kb/blogs/: dont-build-multi-agents.md  q-commerce-vs-traditional-retail.md  rebranding-of-divam-tech.md  why-ai-agents-and-rag-applications-are-essential.md
backend/kb/case-studies/: meeting-summarizer-ai-agent.md  protocol-summarizer-ai-agent.md  resume-to-job-match-agent.md
backend/kb/company/: contact.md  technology-stack.md
backend/scripts/: ingest.py
docs/: agent_architecture.md  how_to_implement_tools.md  ingestion_pipeline.md
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  types.ts
kb/blogs/: ai-agents-in-action-25-real-world-use-cases.md  dont-build-multi-agents.md  only-vector-search-is-not-optimal-rag-search.md  rebranding-of-divam-tech.md  (+3 more)
(+22 files in other folders)
