[project]
name = "nom-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
]
